[package]
name = "transactions-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
